--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ yarn-debug.log*
 /config/credentials.yml.enc
 /test
 .idea/
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
