--- a/config/settings.yml
+++ b/config/settings.yml
@@ -3,6 +3,7 @@ role:
   user: 1
   admin: 2
 job_per_page: 10
+profile_per_page: 10
 image_link: "https://loremflickr.com/g/300/300/logo,company/all"
 validation:
   title_min: 10
