--- a/config/settings.yml
+++ b/config/settings.yml
@@ -12,6 +12,7 @@ validation:
   salary_min: 5
   address_min: 5
   address_max: 255
+VALID_EMAIL_REGEX: !ruby/regexp /\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i
 type:
   part_time: 1
   full_time: 2
