--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.5.0",
-    "datatables.net-bs4": "^1.10.21",
     "cocoon": "github:nathanvda/cocoon#c24ba53",
+    "datatables.net-bs4": "^1.10.21",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "toastr": "^2.1.4",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
