--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.5.0",
     "cocoon": "github:nathanvda/cocoon#c24ba53",
+    "cocoon-js": "^0.0.5",
     "datatables.net-bs4": "^1.10.21",
     "i18n-js": "^3.7.0",
     "jquery": "^3.5.1",
