--- a/config/settings.yml
+++ b/config/settings.yml
@@ -3,7 +3,8 @@ role:
   user: 1
   admin: 2
 job_per_page: 10
-profile_per_page: 10
+post_per_page: 8 
+profile_per_page: 4
 image_link: "https://loremflickr.com/g/300/300/logo,company/all"
 validation:
   title_min: 10
@@ -13,7 +14,10 @@ validation:
   salary_min: 5
   address_min: 5
   address_max: 255
+  point_length: 3
   max_length: 255
+  point_less_than: 100
+  point_greater_than: 0
 VALID_EMAIL_REGEX: !ruby/regexp /\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i
 type:
   part_time: 1
