--- a/config/settings.yml
+++ b/config/settings.yml
@@ -34,3 +34,6 @@ image:
   accept: "image/jpg, image/jpeg, image/png"
 password_default : "123456"
 phone_number: 0123456789
+pagination:
+  profile:
+    per: 9
